updated contoller with AllArgs and removed exceptions