@@ -1,19 +1,23 @@
 package com.sahil.ecom.service.impl;
 
-import com.sahil.ecom.dto.category.*;
+import com.sahil.ecom.dto.category.AddCategoryDTO;
+import com.sahil.ecom.dto.category.CategoryUpdateDTO;
+import com.sahil.ecom.dto.category.FetchCategoryDTO;
+import com.sahil.ecom.dto.category.SavedCategoryDTO;
 import com.sahil.ecom.dto.category.metadata.field.AddMetaDataFieldDTO;
 import com.sahil.ecom.dto.category.metadata.field.FetchMetaDataFieldDTO;
 import com.sahil.ecom.dto.category.metadata.field.value.AddCategoryMetaDataFieldValueDTO;
-import com.sahil.ecom.entity.*;
-import com.sahil.ecom.exception.CategoryHierarchyException;
-import com.sahil.ecom.exception.IdNotFoundException;
+import com.sahil.ecom.entity.Category;
+import com.sahil.ecom.entity.CategoryFieldValueKey;
+import com.sahil.ecom.entity.CategoryMetaDataField;
+import com.sahil.ecom.entity.CategoryMetaDataFieldValue;
+import com.sahil.ecom.exception.GenericException;
 import com.sahil.ecom.repository.CategoryMetaDataFieldRepository;
 import com.sahil.ecom.repository.CategoryMetaDataFieldValueRepository;
 import com.sahil.ecom.repository.CategoryRepository;
 import com.sahil.ecom.service.CategoryService;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.AllArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.MessageSource;
 import org.springframework.context.i18n.LocaleContextHolder;
 import org.springframework.data.domain.Page;
@@ -24,50 +28,37 @@ import org.springframework.stereotype.Service;
 
 import javax.transaction.Transactional;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
+@Slf4j
+@AllArgsConstructor
 public class CategoryServiceImpl implements CategoryService {
 
-    @Autowired
-    private CategoryMetaDataFieldRepository categoryMetaDataFieldRepository;
-
-    @Autowired
-    private CategoryRepository categoryRepository;
-
-    @Autowired
-    private CategoryMetaDataFieldValueRepository categoryMetaDataFieldValueRepository;
-
-    Logger logger= LoggerFactory.getLogger(CategoryServiceImpl.class);
-
-    @Autowired
-    private MessageSource messageSource;
+    private final CategoryMetaDataFieldRepository categoryMetaDataFieldRepository;
+    private final CategoryRepository categoryRepository;
+    private final CategoryMetaDataFieldValueRepository categoryMetaDataFieldValueRepository;
+    private final MessageSource messageSource;
 
     @Override
     public AddMetaDataFieldDTO addCategoryMetadataField(AddMetaDataFieldDTO metaDataFieldDTO) {
-
-        if(categoryMetaDataFieldRepository.existsByName(metaDataFieldDTO.getFieldName())){
-            throw new CategoryHierarchyException(messageSource
-                    .getMessage("field.already.exist",null,"message",LocaleContextHolder.getLocale()));
+        if (categoryMetaDataFieldRepository.existsByName(metaDataFieldDTO.getFieldName())) {
+            throw new GenericException(messageSource
+                    .getMessage("field.already.exist", null, "message", LocaleContextHolder.getLocale()));
         }
-
         CategoryMetaDataField savedCategoryMetaDataField =
                 categoryMetaDataFieldRepository.save(new CategoryMetaDataField(metaDataFieldDTO.getFieldName()));
-
-        if(savedCategoryMetaDataField!=null){
+        if (savedCategoryMetaDataField != null) {
             metaDataFieldDTO.setId(savedCategoryMetaDataField.getId());
         }
-
         return metaDataFieldDTO;
-
     }
 
     @Override
     public List<FetchMetaDataFieldDTO> getAllMetaDataFields() {
 
         return categoryMetaDataFieldRepository.findAll().stream().map(categoryMetaDataField -> {
-             return new FetchMetaDataFieldDTO(categoryMetaDataField.getName());
-        }).collect(Collectors.toList());
+            return new FetchMetaDataFieldDTO(categoryMetaDataField.getName());
+        }).toList();
 
     }
 
@@ -78,13 +69,13 @@ public class CategoryServiceImpl implements CategoryService {
 
         checkCategoryUniqueness(addCategoryDTO);
 
-        if(addCategoryDTO.getParentId()!=null) {
+        if (addCategoryDTO.getParentId() != null) {
 
             Category parent = categoryRepository
                     .findById(addCategoryDTO.getParentId())
-                    .orElseThrow(IdNotFoundException::new);
+                    .orElseThrow(GenericException::new);
 
-            newCategory = new Category(addCategoryDTO.getCategoryName(),parent);
+            newCategory = new Category(addCategoryDTO.getCategoryName(), parent);
 
             newCategory.setParent(parent);
 //            parent.addChildren(newCategory);
@@ -103,40 +94,30 @@ public class CategoryServiceImpl implements CategoryService {
     public boolean updateCategory(CategoryUpdateDTO categoryUpdateDTO) {
 
         //check if exist
-        //
-        if(categoryRepository.existsById(categoryUpdateDTO.getCategoryId())){
-            return  categoryRepository
+        if (categoryRepository.existsById(categoryUpdateDTO.getCategoryId())) {
+            return categoryRepository
                     .updateCategoryName(
                             categoryUpdateDTO.getCategoryName(),
                             categoryUpdateDTO.getCategoryId()
-                    )>0;
+                    ) > 0;
         }
-        throw new IdNotFoundException();
+        throw new GenericException();
 
     }
 
-//    @Override
-    public List<FetchCategoryDTO> getAllCategoriesPaged(int page, int size, String sort,String order) {
+    //    @Override
+    public List<FetchCategoryDTO> getAllCategoriesPaged(int page, int size, String sort, String order) {
 
         Pageable pageable = PageRequest.of(page, size);
 
-        if(order.equals("ASC")){
-
+        if (order.equals("ASC")) {
             pageable = PageRequest.of(page, size, Sort.by(sort).ascending());
-
-        }
-        else if(order.equals("DESC")){
+        } else if (order.equals("DESC")) {
             pageable = PageRequest.of(page, size, Sort.by(sort).descending());
-
         }
-
-//        assert pageable != null;
         Page<Category> categoryPage = categoryRepository.findAll(pageable);
-
         List<Category> categoryList = categoryPage.getContent();
-
-        //Constructor reference
-        return categoryList.stream().map(FetchCategoryDTO::new).collect(Collectors.toList());
+        return categoryList.stream().map(FetchCategoryDTO::convertCategoryToFetchCategoryDTO).toList();
 
     }
 
@@ -145,20 +126,17 @@ public class CategoryServiceImpl implements CategoryService {
         return categoryRepository
                 .findAll()
                 .stream()
-                .map(FetchCategoryDTO::new)
-                .collect(Collectors.toList());
+                .map(FetchCategoryDTO::convertCategoryToFetchCategoryDTO)
+                .toList();
     }
 
     @Override
     public FetchCategoryDTO getCategoryById(Long id) {
-
         Category category = categoryRepository
                 .findById(id)
-                .orElseThrow(IdNotFoundException::new);
-
-        return new FetchCategoryDTO(category);
+                .orElseThrow(GenericException::new);
+        return FetchCategoryDTO.convertCategoryToFetchCategoryDTO(category);
     }
-
 
     @Override
     public void addCategoryMetadataFieldWithValue(AddCategoryMetaDataFieldValueDTO addCategoryMetaDataFieldValueDTO) {
@@ -166,26 +144,25 @@ public class CategoryServiceImpl implements CategoryService {
         //find category for given id
         Category category = categoryRepository
                 .findById(addCategoryMetaDataFieldValueDTO
-                        .getCategoryId()).orElseThrow(IdNotFoundException::new);
+                        .getCategoryId()).orElseThrow(GenericException::new);
 
         //exception if not a leaf node
-        if(category.getChildren().size() >0){
-//            throw new CategoryHierarchyException(" META DATA FIELD VALUES CAN ONLY BE ADDED IN LEAF CATEGORIES ");
-            throw new CategoryHierarchyException(messageSource.getMessage("leaf.category.validation",null,"message", LocaleContextHolder.getLocale()));
+        if (!category.getChildren().isEmpty()) {
+            throw new GenericException(messageSource.getMessage("leaf.category.validation", null, "message", LocaleContextHolder.getLocale()));
         }
 
         //find field for given id
         CategoryMetaDataField categoryMetaDataField = categoryMetaDataFieldRepository
                 .findById(addCategoryMetaDataFieldValueDTO
                         .getMetaDataFieldId())
-                .orElseThrow(IdNotFoundException::new);
+                .orElseThrow(GenericException::new);
 
         //make string form set
-        String valuesString = String.join(",",addCategoryMetaDataFieldValueDTO.getMetaDataFieldValues());
+        String valuesString = String.join(",", addCategoryMetaDataFieldValueDTO.getMetaDataFieldValues());
 
         //set up object to save in db
         CategoryMetaDataFieldValue value = new CategoryMetaDataFieldValue(valuesString);
-        value.setCategoryFieldValueKey(new CategoryFieldValueKey(category.getId(),categoryMetaDataField.getId()));
+        value.setCategoryFieldValueKey(new CategoryFieldValueKey(category.getId(), categoryMetaDataField.getId()));
         value.setCategory(category);
         value.setCategoryMetaDataField(categoryMetaDataField);
 
@@ -199,11 +176,8 @@ public class CategoryServiceImpl implements CategoryService {
         ///save category
         categoryRepository.save(category);
 
-
         //save meta data field
         categoryMetaDataFieldRepository.save(categoryMetaDataField);
-
-
     }
 
     @Override
@@ -211,126 +185,86 @@ public class CategoryServiceImpl implements CategoryService {
         //get category if exist
         Category category = categoryRepository
                 .findById(updateCategoryMetaDataFieldValueDTO
-                        .getCategoryId()).orElseThrow(IdNotFoundException::new);
+                        .getCategoryId()).orElseThrow(GenericException::new);
 
         //if not a leaf then not possible
-        if(category.getChildren().size() > 0){
-            throw new CategoryHierarchyException(messageSource.getMessage("leaf.category.validation",null,"message", LocaleContextHolder.getLocale()));
-//            throw new CategoryHierarchyException(" META DATA FIELD VALUES CAN ONLY BE ADDED IN LEAF CATEGORIES ");
+        if (!category.getChildren().isEmpty()) {
+            throw new GenericException(messageSource.getMessage("leaf.category.validation", null, "message", LocaleContextHolder.getLocale()));
         }
 
         //find meta field if exist
         CategoryMetaDataField categoryMetaDataField = categoryMetaDataFieldRepository
                 .findById(updateCategoryMetaDataFieldValueDTO
                         .getMetaDataFieldId())
-                .orElseThrow(IdNotFoundException::new);
+                .orElseThrow(GenericException::new);
 
         // find value String for provide category and field
         CategoryMetaDataFieldValue categoryMetaDataFieldValue = categoryMetaDataFieldValueRepository
-                .findById(new CategoryFieldValueKey(category.getId(),categoryMetaDataField.getId()))
-                .orElseThrow(IdNotFoundException::new);
+                .findById(new CategoryFieldValueKey(category.getId(), categoryMetaDataField.getId()))
+                .orElseThrow(GenericException::new);
 
-//        get saved values String
-        String savedValueString  = categoryMetaDataFieldValue.getValues();
-
-        //convert to set
-        Set<String> savedValuesSet =  convertStringValuesToSet(savedValueString);
-
-        //new Set of values
+        String savedValueString = categoryMetaDataFieldValue.getValues();
+        Set<String> savedValuesSet = convertStringValuesToSet(savedValueString);
         Set<String> newValuesSet = updateCategoryMetaDataFieldValueDTO.getMetaDataFieldValues();
-
-
-        //merge both sets
         savedValuesSet.addAll(newValuesSet);
-
-        //convert back Set to String
-        String updatedValuesString = String.join(",",savedValuesSet);
-
+        String updatedValuesString = String.join(",", savedValuesSet);
         categoryMetaDataFieldValue.setValues(updatedValuesString);
-
-        //save
         categoryMetaDataFieldValueRepository.save(categoryMetaDataFieldValue);
 
     }
 
-    private Set<String> convertStringValuesToSet(String values){
-
+    private Set<String> convertStringValuesToSet(String values) {
         String[] valueList = values.split(",");
-
         Set<String> valuesSet = new HashSet<>(Arrays.asList(valueList));
-        logger.info(valuesSet.toString());
-
+        log.info(valuesSet.toString());
         return valuesSet;
     }
 
     @Override
     public List<FetchCategoryDTO> getAllRootCategories() {
-
         return categoryRepository
                 .findRootCategories()
                 .stream()
-                .map(FetchCategoryDTO::new)
-                .collect(Collectors.toList());
-
+                .map(FetchCategoryDTO::convertCategoryToFetchCategoryDTO)
+                .toList();
     }
 
     @Override
     public void checkCategoryUniqueness(AddCategoryDTO addCategoryDTO) {
-
         String categoryName = addCategoryDTO.getCategoryName();
-
-        logger.info("----------------CHECKING ---------" + categoryName);
-
+        log.info("----------------CHECKING ---------" + categoryName);
         //category already Exist
-        if(categoryRepository.existsByName(categoryName)){
-
+        if (categoryRepository.existsByName(categoryName)) {
             //if we want category at root
-            if(addCategoryDTO.getParentId()==null) {
-                //check uniqueness at root level
-                //if >0 not unique
-                logger.info("--------------Parent null----------");
-                if(categoryRepository.checkUniqueAtRoot(categoryName) == 0){
+            if (Objects.isNull(addCategoryDTO.getParentId())) {
+                //check uniqueness at root level,if >0 not unique
+                log.info("--------------Parent null----------");
+                if (categoryRepository.checkUniqueAtRoot(categoryName) == 0) {
                     return;
                 }
-
-//                throw new CategoryHierarchyException("Category: " + categoryName + " Already Exist at Root Level ");
-                throw new CategoryHierarchyException(categoryName +
-                        messageSource.getMessage("root.category.validation",null,"message",LocaleContextHolder.getLocale()));
+                throw new GenericException(categoryName + messageSource.getMessage("root.category.validation", null, "message", LocaleContextHolder.getLocale()));
             }
-
-            //check parents name till root
-            //check all children
-            Category category = categoryRepository.findById(addCategoryDTO.getParentId()).get();
-
-            for (Category child:category.getChildren()) {
-                if(child.getName().equals(categoryName)){
-                    logger.info("--------------SAME SIBLING----------");
-//                    return false;
-//                    throw new CategoryHierarchyException(" SAME SIBLING ALREADY EXIST ");
-                    throw new CategoryHierarchyException(
-                            messageSource.getMessage("same.sibling.validation",null,"message",LocaleContextHolder.getLocale()));
+            /***
+             check parents name till root
+             check all children
+             */
+            Category category = categoryRepository.findById(addCategoryDTO.getParentId()).orElseThrow(() -> new GenericException(""));
+            for (Category child : category.getChildren()) {
+                if (child.getName().equals(categoryName)) {
+                    log.info("--------------SAME SIBLING----------");
+                    throw new GenericException(messageSource.getMessage("same.sibling.validation", null, "message", LocaleContextHolder.getLocale()));
                 }
             }
 
-            while(category.getParent()!=null){
-
-                if(category.getParent().getName().equals(categoryName)){
-                    logger.info("--------------SAME NAME IN ROOT to NODE Path----------");
-//                    throw  new CategoryHierarchyException(" SAME NAME IN ROOT TO NODE PATH ");
-                    throw new CategoryHierarchyException(
-                            messageSource.getMessage("node.to.root.validation",null,"message",LocaleContextHolder.getLocale()));
-
+            while (category.getParent() != null) {
+                if (category.getParent().getName().equals(categoryName)) {
+                    log.info("--------------SAME NAME IN ROOT to NODE Path----------");
+                    throw new GenericException(messageSource.getMessage("node.to.root.validation", null, "message", LocaleContextHolder.getLocale()));
                 }
                 category = category.getParent();
-
             }
-            logger.info("--------------ALL GOOD----------");
-
             return;
-
         }
-
-        logger.info("--------------SIMPLE CASE----------");
-
+        log.info("--------------SIMPLE CASE----------");
     }
 }
