@@ -1,16 +1,15 @@
 package com.sahil.ecom.service.impl;
 
-import com.sahil.ecom.dto.*;
+import com.sahil.ecom.dto.FetchAddressDTO;
+import com.sahil.ecom.dto.LoginRequestDTO;
+import com.sahil.ecom.dto.LoginResponseDTO;
 import com.sahil.ecom.dto.category.FetchCategoryDTO;
 import com.sahil.ecom.dto.seller.AddSellerDTO;
 import com.sahil.ecom.dto.seller.SellerProfileDTO;
 import com.sahil.ecom.dto.seller.SellerProfileUpdateDTO;
 import com.sahil.ecom.entity.Address;
-import com.sahil.ecom.dto.LoginRequestDTO;
-import com.sahil.ecom.dto.LoginResponseDTO;
 import com.sahil.ecom.entity.Seller;
-import com.sahil.ecom.exception.IdNotFoundException;
-import com.sahil.ecom.exception.UserEmailNotFoundException;
+import com.sahil.ecom.exception.GenericException;
 import com.sahil.ecom.repository.RoleRepository;
 import com.sahil.ecom.repository.SellerRepository;
 import com.sahil.ecom.repository.UserRepository;
@@ -18,7 +17,8 @@ import com.sahil.ecom.security.TokenGeneratorHelper;
 import com.sahil.ecom.service.CategoryService;
 import com.sahil.ecom.service.LoginService;
 import com.sahil.ecom.service.SellerService;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.AllArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 
@@ -26,31 +26,18 @@ import java.io.File;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@Slf4j
+@AllArgsConstructor
 public class SellerServiceImpl implements SellerService {
-
-    @Autowired
-    private SellerRepository sellerRepository;
-
-    @Autowired
-    private BCryptPasswordEncoder passwordEncoder;
-
-    @Autowired
-    private UserRepository userRepository;
-
-    @Autowired
-    private RoleRepository roleRepository;
-
-    @Autowired
-    private LoginService loginService;
-
-    @Autowired
-    private TokenGeneratorHelper tokenGeneratorHelper;
-
-    @Autowired
-    private CategoryService categoryService;
+    private final SellerRepository sellerRepository;
+    private final BCryptPasswordEncoder passwordEncoder;
+    private final UserRepository userRepository;
+    private final RoleRepository roleRepository;
+    private final LoginService loginService;
+    private final TokenGeneratorHelper tokenGeneratorHelper;
+    private final CategoryService categoryService;
 
     @Override
     public boolean checkSellerCompanyName(String companyName) {
@@ -63,9 +50,9 @@ public class SellerServiceImpl implements SellerService {
     }
 
     @Override
-    public Seller getSellerById(Long id){
+    public Seller getSellerById(Long id) {
 //       if(sellerRepository.existsById(id)){
-            return sellerRepository.findById(id).orElseThrow(IdNotFoundException::new);
+        return sellerRepository.findById(id).orElseThrow(GenericException::new);
 //        }
 //        throw new UsernameNotFoundException("SELLER SERVICE:USER ID NOT FOUND");
 //        return null;
@@ -128,28 +115,27 @@ public class SellerServiceImpl implements SellerService {
     }
 
 
-
     @Override
     public SellerProfileDTO fetchSellerProfileDetails(String userEmail) {
 
-            Seller seller = sellerRepository.findByEmail(userEmail).orElseThrow(UserEmailNotFoundException::new);
+        Seller seller = sellerRepository.findByEmail(userEmail).orElseThrow(GenericException::new);
 
-            SellerProfileDTO sellerProfile = new SellerProfileDTO();
+        SellerProfileDTO sellerProfile = new SellerProfileDTO();
 
-            sellerProfile.setId(seller.getId());
-            sellerProfile.setFirstName(seller.getFirstName());
-            sellerProfile.setMiddleName(seller.getMiddleName());
-            sellerProfile.setLastName(seller.getLastName());
-            sellerProfile.setActive(seller.isActive());
-            sellerProfile.setEmail(userEmail);
-            sellerProfile.setCompanyName(seller.getCompanyName());
-            sellerProfile.setCompanyContact(seller.getCompanyContact());
-            sellerProfile.setGst(seller.getGst());
-            sellerProfile.setCompanyAddress(new FetchAddressDTO(seller.getAddresses().get(0)));
+        sellerProfile.setId(seller.getId());
+        sellerProfile.setFirstName(seller.getFirstName());
+        sellerProfile.setMiddleName(seller.getMiddleName());
+        sellerProfile.setLastName(seller.getLastName());
+        sellerProfile.setActive(seller.isActive());
+        sellerProfile.setEmail(userEmail);
+        sellerProfile.setCompanyName(seller.getCompanyName());
+        sellerProfile.setCompanyContact(seller.getCompanyContact());
+        sellerProfile.setGst(seller.getGst());
+        sellerProfile.setCompanyAddress(new FetchAddressDTO(seller.getAddresses().get(0)));
 
-            sellerProfile.setImageUrl(getImageUrlIfExist(seller.getId()));
+        sellerProfile.setImageUrl(getImageUrlIfExist(seller.getId()));
 
-            return sellerProfile;
+        return sellerProfile;
 
     }
 
@@ -157,41 +143,41 @@ public class SellerServiceImpl implements SellerService {
     @Override
     public boolean updateSellerProfile(String username, SellerProfileUpdateDTO sellerProfileUpdateDTO) {
 
-            Seller seller = sellerRepository.findByEmail(username).orElseThrow(UserEmailNotFoundException::new);
+        Seller seller = sellerRepository.findByEmail(username).orElseThrow(GenericException::new);
 
-            if(sellerProfileUpdateDTO.getFirstName()!=null)
-                seller.setFirstName(sellerProfileUpdateDTO.getFirstName());
+        if (sellerProfileUpdateDTO.getFirstName() != null)
+            seller.setFirstName(sellerProfileUpdateDTO.getFirstName());
 
-            if(sellerProfileUpdateDTO.getMiddleName()!=null)
-                seller.setMiddleName(sellerProfileUpdateDTO.getMiddleName());
+        if (sellerProfileUpdateDTO.getMiddleName() != null)
+            seller.setMiddleName(sellerProfileUpdateDTO.getMiddleName());
 
-            if(sellerProfileUpdateDTO.getLastName()!=null)
-                seller.setLastName(sellerProfileUpdateDTO.getLastName());
+        if (sellerProfileUpdateDTO.getLastName() != null)
+            seller.setLastName(sellerProfileUpdateDTO.getLastName());
 
-            if(sellerProfileUpdateDTO.getCompanyContact()!=null)
-                seller.setCompanyContact(sellerProfileUpdateDTO.getCompanyContact());
+        if (sellerProfileUpdateDTO.getCompanyContact() != null)
+            seller.setCompanyContact(sellerProfileUpdateDTO.getCompanyContact());
 
-            if(sellerProfileUpdateDTO.getCompanyName()!= null)
-                seller.setCompanyName(sellerProfileUpdateDTO.getCompanyName());
+        if (sellerProfileUpdateDTO.getCompanyName() != null)
+            seller.setCompanyName(sellerProfileUpdateDTO.getCompanyName());
 
-            if(sellerProfileUpdateDTO.getGst()!=null){
-                seller.setGst(sellerProfileUpdateDTO.getGst());
-            }
+        if (sellerProfileUpdateDTO.getGst() != null) {
+            seller.setGst(sellerProfileUpdateDTO.getGst());
+        }
 
-            sellerRepository.save(seller);
+        sellerRepository.save(seller);
 
-            return true;
+        return true;
     }
 
-    private String getImageUrlIfExist(Long id){
+    private String getImageUrlIfExist(Long id) {
 
-        String path = "./images/users/"+id+ ".jpg";
+        String path = "./images/users/" + id + ".jpg";
 
         File f = new File(path.trim());
-        if(f.exists() && !f.isDirectory()) {
+        if (f.exists() && !f.isDirectory()) {
             // do something
 
-            return "localhost:8080/images/users/"+id+".jpg";
+            return "localhost:8080/images/users/" + id + ".jpg";
         }
         return "Not Uploaded";
     }
@@ -201,7 +187,7 @@ public class SellerServiceImpl implements SellerService {
 
         List<FetchCategoryDTO> fetchCategoryList = categoryService.getAllCategories();
 
-        return fetchCategoryList.stream().filter(fetchCategoryDTO -> fetchCategoryDTO.getChildren().size() == 0).collect(Collectors.toList());
+        return fetchCategoryList.stream().filter(fetchCategoryDTO -> fetchCategoryDTO.getChildren().isEmpty()).toList();
 
     }
 }
